--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,10 @@
 
 
+body {
+    width: 1600px;
+    margin: 0 auto;
+}
+
 .global-header {
     position: absolute;
     width: 1600px;
@@ -22,16 +27,18 @@
     color: #000000;
 }
 
-.logo-section>a, .footer-section>h3>a {
+.logo-section>a, 
+.footer-section>h3>a {
     color: inherit;
     text-decoration: none;
 }
 
-.logo-section>a>span, .footer-section>h3>a>span {
+.logo-section>a>span, 
+.footer-section>h3>a>span {
     color: #2196F3;
 }
 
-/* Navigation section */
+/* nav section */
 
 .nav-list {
     position: absolute;
@@ -101,7 +108,7 @@
 }
 
 /* Select logo */
-/* 
+
 #studio-indicator {
     position: absolute;
     left: 481px;
@@ -112,7 +119,7 @@
 #email-indicator {
     padding-right: 470px;
     margin-top: 53px;
-} */
+}
 
 /* Banner section */
 .top-banner {
@@ -417,3 +424,4 @@
     letter-spacing: 0.03em;
     color: #757575;
 }
+
